--- a/testing.env
+++ b/testing.env
@@ -1,6 +1,6 @@
 APP_NAME=cookery-book
-APP_ENV=local
-APP_KEY=
+APP_ENV=testing
+APP_KEY=base64:EGweCQ6lKLvPPnC48U9ZE/BGyHQn2F2jajGZs87c+94=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
