--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.10",
+        "@toast-ui/editor": "^3.2.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
