--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@alpinejs/mask": "^3.13.3",
+        "@alpinejs/morph": "^3.13.3",
+        "@imacrayon/alpine-ajax": "^0.4.0",
         "htmx.org": "^1.9.9"
     }
 }
