--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.8"
+version: "3.9"
 services:
     # PHP Server
     php:
         container_name: php
         build:
             context: .
-            target: composer
+            target: php
             args:
                 - APP_ENV=${APP_ENV}
         env_file:
@@ -14,17 +14,20 @@ services:
             - APP_ENV=${APP_ENV}
             - CONTAINER_ROLE=app
         volumes:
-            - .:/app
+            - .:/var/www
         ports:
             - 8000:8000
         depends_on:
-            - database
+            - mysql
+            - redis
+        restart: on-failure
+
     # Node Server
     node:
         container_name: node
         build:
             context: .
-            target: composer
+            target: node
         volumes:
             - .:/var/www
             - ./node_modules:/var/www/node_modules
@@ -33,8 +36,8 @@ services:
         tty: true
 
     # Database Server
-    database:
-        container_name: database
+    mysql:
+        container_name: db
         image: mysql:8.2
         restart: on-failure
         ports:
@@ -49,20 +52,25 @@ services:
         volumes:
             - db-vol:/var/lib/mysql
 
+    # Redis
+    redis:
+        container_name: redis
+        image: 'redis:alpine'
+
     # Queue
-#    queue:
-#        container_name: Queue
-#        build:
-#            context: .
-#            target: php
-#        command: 'php artisan queue:work'
-#        depends_on:
-#            - database
+    queue:
+        container_name: queue
+        build:
+            context: .
+            target: php-queue
+        command: 'php artisan queue:work'
+        depends_on:
+            - php
 
     # Mailpit
     mailpit:
         image: axllent/mailpit
-        container_name: MailPit
+        container_name: mailpit
         ports:
             - "1025:1025"
             - "8025:8025"
