Docker fixed - Added complement containers

--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -1,12 +1,11 @@
 FROM node:21 as node
 
-WORKDIR /var/www
-COPY . /var/www
+WORKDIR /var/www/html
+COPY . .
 
 RUN npm install --global cross-env
 RUN npm install
 
-VOLUME /var/www/node_modules
+VOLUME /var/www/html/node_modules
 
 ENTRYPOINT [ ".docker/node/entrypoint.sh" ]
-
