--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,16 @@
-#node_modules
+/.composer
+/.git
+/.github
+/.vscode
+/.well-known
+/node_modules
 /vendor
-#/public/storage
-##package.lock
-##composer.lock
-##Makefile
+/public/storage
+/storage/*
+*.log
+*.lock
+.dockerignore
+.gitignore
+docker-compose.yaml
+Dockerfile
+README.md
